Aggiunte le pagine jsp, forse non le ho messe tutte. Aggiunto il menù delle pagine principali. Aggiunta la pagina di Errore 404 (DA PROVARE). Tipo appare quando qualcuno accede a una pagina jsp a mano.

--- a/DoyProject/WebContent/css/kickstart-slideshow.css
+++ b/DoyProject/WebContent/css/kickstart-slideshow.css
@@ -1,23 +1,22 @@
 /*---------------------------------
 	SLIDESHOW2 - Slight Fixes for the slideshow layout *needs work
 -----------------------------------*/
+.slideshow {
+	clear: both;
+	margin: 0;
+	padding: 0;
+	width: auto;
+	height: auto;
+	overflow: hidden;
+}
 
-	.slideshow{
-	clear:both;
-	margin:0;
-	padding:0;
-	width:auto;
-	height:auto;
-	overflow:hidden;
-	}
-
-		.slideshow li{
-		list-style-type:none;
-		margin:0;
-		padding:0;
-		float:left;
-		display:block;
-		}
+.slideshow li {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	float: left;
+	display: block;
+}
 
 /**
  * BxSlider v4.0 - Fully loaded, responsive content slider
@@ -31,10 +30,8 @@
  * http://bxcreative.com
  */
 
-
 /** RESET AND LAYOUT
 ===================================*/
-
 .bx-wrapper {
 	position: relative;
 	margin: 0 0 60px;
@@ -49,7 +46,6 @@
 
 /** THEME
 ===================================*/
-
 .bx-wrapper .bx-viewport {
 	-moz-box-shadow: 0 0 5px #ccc;
 	-webkit-box-shadow: 0 0 5px #ccc;
@@ -59,15 +55,13 @@
 	background: #fff;
 }
 
-.bx-wrapper .bx-pager,
-.bx-wrapper .bx-controls-auto {
+.bx-wrapper .bx-pager,.bx-wrapper .bx-controls-auto {
 	position: absolute;
 	bottom: -30px;
 	width: 100%;
 }
 
 /* LOADER */
-
 .bx-wrapper .bx-loading {
 	min-height: 50px;
 	background: url(img/bx_loader.gif) center center no-repeat #fff;
@@ -80,7 +74,6 @@
 }
 
 /* PAGER */
-
 .bx-wrapper .bx-pager {
 	text-align: center;
 	font-size: .85em;
@@ -90,8 +83,8 @@
 	padding-top: 20px;
 }
 
-.bx-wrapper .bx-pager .bx-pager-item,
-.bx-wrapper .bx-controls-auto .bx-controls-auto-item {
+.bx-wrapper .bx-pager .bx-pager-item,.bx-wrapper .bx-controls-auto .bx-controls-auto-item
+	{
 	display: inline-block;
 	*zoom: 1;
 	*display: inline;
@@ -110,13 +103,12 @@
 	border-radius: 5px;
 }
 
-.bx-wrapper .bx-pager.bx-default-pager a:hover,
-.bx-wrapper .bx-pager.bx-default-pager a.active {
+.bx-wrapper .bx-pager.bx-default-pager a:hover,.bx-wrapper .bx-pager.bx-default-pager a.active
+	{
 	background: #000;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
-
 .bx-wrapper .bx-prev {
 	left: 10px;
 	background: url(img/controls.png) no-repeat 0 -32px;
@@ -151,7 +143,6 @@
 }
 
 /* AUTO CONTROLS (START / STOP) */
-
 .bx-wrapper .bx-controls-auto {
 	text-align: center;
 }
@@ -166,8 +157,8 @@
 	margin: 0 3px;
 }
 
-.bx-wrapper .bx-controls-auto .bx-start:hover,
-.bx-wrapper .bx-controls-auto .bx-start.active {
+.bx-wrapper .bx-controls-auto .bx-start:hover,.bx-wrapper .bx-controls-auto .bx-start.active
+	{
 	background-position: -86px 0;
 }
 
@@ -181,25 +172,24 @@
 	margin: 0 3px;
 }
 
-.bx-wrapper .bx-controls-auto .bx-stop:hover,
-.bx-wrapper .bx-controls-auto .bx-stop.active {
+.bx-wrapper .bx-controls-auto .bx-stop:hover,.bx-wrapper .bx-controls-auto .bx-stop.active
+	{
 	background-position: -86px -33px;
 }
 
 /* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
-
 .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
 	text-align: left;
 	width: 80%;
 }
 
-.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto
+	{
 	right: 0;
 	width: 35px;
 }
 
 /* IMAGE CAPTIONS */
-
 .bx-wrapper .bx-caption {
 	position: absolute;
 	bottom: 0;
