--- a/DoyProject/WebContent/css/kickstart-menus.css
+++ b/DoyProject/WebContent/css/kickstart-menus.css
@@ -12,9 +12,13 @@
 	padding: 0;
 	line-height: 100%;
 	font-size: 0; /* Kill white space gap between LI elements */
-	position: relative;
+	/*position: relative;*/
 	z-index: 1000;
+	position: fixed;	/*AGGIUNTO IO*/
+	width: 100%;		/*AGGIUNTO IO*/
+	white-space:nowrap;	/*AGGIUNTO IO*/
 }
+
 
 .menu:after {
 	clear: both;
