--- a/DoyProject/WebContent/css/kickstart.css
+++ b/DoyProject/WebContent/css/kickstart.css
@@ -109,7 +109,7 @@ hr {
 	border-top: 1px dotted #ccc;
 	border-right: 0;
 	border-left: 0;
-	margin: 30px 0;
+	/*margin: 30px 0; ****** TOLTO IO ******/
 	min-height: 0;
 	height: 1px;
 }
@@ -570,12 +570,27 @@ img.full-width {
 	margin: 0 0 10px 0;
 }
 
-
 /*Aggiunta questa classe per centrare le immagini*/
 img.center {
-   display: block; 
-   margin-left: auto; 
-   margin-right: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* AGGIUNTO IO */
+div.div_head {
+	width: 98%;
+	margin-left: 0.90%;
+	background-color: black;
+	color: #00FF00;
+}
+
+/* AGGIUNTO IO */
+div.div_p {
+	width: 98%;
+	margin-left: 0.90%;
+}
+/* border-radius: 10px; *
 }
 
 div.caption {
