Inserita la pagina di errore. Utilizzato un altro metodo aggiunto in Reparto che però torna una lista intera di reparti. Modificato il file css kickstart-forms in e aggiunta la classe di errore per le fieldset e per la legend.
Devo fare: 
*Modifica del profilo dottore
*Messaggi
*Gestire il doppio inserimento di username nel database (doppia chiave)
*Modificare bene il file web.xml in modo che torni la pagina principale
di signin senza bisogno di scriverla nell'url (per ultimo magari)
*Utente speciale che può aggiungere i reparti

********DA AGGIUNGERE (sarebbe comodo)
*Campo di ricerca nei pazienti

--- a/DoyProject/WebContent/css/kickstart-forms.css
+++ b/DoyProject/WebContent/css/kickstart-forms.css
@@ -19,6 +19,14 @@ fieldset {
 	left: 0;
 }
 
+/* ***** AGGIUNTO IO ****** */
+fieldset.error{
+	
+	border: 1px solid red;
+	background: pink;
+	
+}
+
 legend {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -31,6 +39,12 @@ legend {
 	position: relative;
 	top: 0;
 	left: 0;
+}
+
+/* ***** AGGIUNTO IO ****** */
+legend.error {
+	border: 1px solid red;
+	
 }
 
 /*IE ONLY - I know, this is a stop gap*/
