--- a/DoyProject/WebContent/css/kickstart-forms.css
+++ b/DoyProject/WebContent/css/kickstart-forms.css
@@ -119,6 +119,30 @@ input {
 	box-sizing: border-box;
 }
 
+/* AGGIUNTO IO. TEXT FIELD TRASPARENTE */
+input.trans{
+	display: inline-block;
+	*display: inline;
+	vertical-align: middle;
+	width: auto;
+	zoom: 1;
+	margin: 0;
+	border: none;
+	font-size: 1em;
+	padding: 5px 0;
+	text-indent: 5px;
+	-moz-border-radius: null;
+	-webkit-border-radius: null;
+	border-radius: null;
+	background: transparent;
+	-moz-box-shadow: null;
+	-webkit-box-shadow: inset 0 1px 6px transparent;
+	box-shadow: null;
+	-moz-box-sizing: null;
+	-webkit-box-sizing: null;
+	box-sizing: null;
+}
+
 input::-webkit-input-placeholder,input:-moz-placeholder,.placeholder {
 	color: #bbb;
 }
@@ -210,7 +234,8 @@ select[disabled="disabled"],select.disabled {
 }
 
 textarea {
-	width: auto;
+	/*width: auto;  COMMENTATO IO */
+	width: inherit;	/*AGGIUNTO IO */
 	height: 200px;
 	margin: 0;
 	border: 1px solid #ccc;
